Modified example.qmd file and added data folder

--- a/example.qmd
+++ b/example.qmd
@@ -8,3 +8,7 @@ editor: visual
 ## Introduction
 
 This is a simple Quarto document.
+
+## Test branch section
+
+This content was added in the testbranch.
