--- a/example.qmd
+++ b/example.qmd
@@ -8,3 +8,7 @@ editor: visual
 ## Introduction
 
 This is a simple Quarto document.
+
+## Main branch section
+
+This section was added in the main branch.
